# FASTAPI_STARTER_KIT

./: .env.example  .gitignore  CHANGELOG.md  CODING_GUIDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  ecosystem.config.js  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: architecture-planner.md
.claude/commands/: db-reset.md  db-reset.yaml  dev.md  dev.yaml  lint.md  lint.yaml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/controllers/: __init__.py  health.py  observability.py  users.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
app/middlewares/: error_handler.py  metrics.py  request_logging.py
app/models/: __init__.py  base.py  user.py
app/repositories/: __init__.py  user.py
app/schemas/: __init__.py  observability.py  response.py  user.py
app/services/: __init__.py  batch_job_example.py  user.py
app/utils/: observability.py
docs/: api-contract.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_create_users_table.py
tests/: conftest.py
tests/integration/: test_health.py  test_metrics.py  test_observability.py  test_users.py
tests/unit/: test_user_service.py
